@@ -22,21 +22,26 @@
 </TR>
 <TR>
 <TD>&nbsp;&nbsp;-progressvar (see <B>-variable</B>)</TD>
+</TR>
 </TABLE></DD>
 </DL>
 <DL>
 <DT><I><A HREF="#wso">WIDGET-SPECIFIC OPTIONS</A></I></DT>
 <DD><TABLE CELLSPACING=0 CELLSPACING=0 BORDER=0>
 <TR>
-<TD>&nbsp;&nbsp;<A HREF="#-height">-height</A></TR>
-<TD>&nbsp;&nbsp;<A HREF="#-menu">-menu</A></TR>
+<TD>&nbsp;&nbsp;<A HREF="#-casesensitive">-casesensitive</A></TD></TR>
+<TR>
+<TD>&nbsp;&nbsp;<A HREF="#-height">-height</A></TD></TR>
+<TR>
+<TD>&nbsp;&nbsp;<A HREF="#-menu">-menu</A></TD>
 </TR>
 <TR>
-<TD>&nbsp;&nbsp;<A HREF="#-separator">-separator</A></TR>
-<TD>&nbsp;&nbsp;<A HREF="#-textvariable">-textvariable</A></TR>
+<TD>&nbsp;&nbsp;<A HREF="#-separator">-separator</A></TD></TR>
+<TR>
+<TD>&nbsp;&nbsp;<A HREF="#-textvariable">-textvariable</A></TD>
 </TR>
 <TR>
-<TD>&nbsp;&nbsp;<A HREF="#-width">-width</A></TR>
+<TD>&nbsp;&nbsp;<A HREF="#-width">-width</A></TD></TR>
 <TD>&nbsp;&nbsp;<A HREF="#-sizegrip">-sizegrip</A></TR>
 </TABLE></DD>
 </DL>
@@ -83,14 +88,36 @@
 MainFrame manage toplevel to have:<BR>
 <UL>
 <LI>simple menu creation, with automatic accelerator bindings and
-<A HREF="DynamicHelp.html">DynamicHelp</A> association,
-<LI>one or more toolbars that user can hide,
-<LI>a status bar, displaying a user message or a menu description, and optionally a 
-<A HREF="ProgressBar.html">ProgressBar</A>.
+<A HREF="DynamicHelp.html">DynamicHelp</A> association,</LI>
+<LI>one or more toolbars that user can hide,</LI>
+<LI>a status bar, displaying a user message or a menu description, and optionally a
+<A HREF="ProgressBar.html">ProgressBar</A>.</LI>
 </UL>
 </P>
 <BR><HR WIDTH="50%"><BR>
 <B><A NAME="wso">WIDGET-SPECIFIC OPTIONS</A></B><BR>
+
+<DL><DT><A NAME="-casesensitive"><B>-casesensitive</B></A></DT>
+<DD>
+Controlls the interpretation of <I>accelerator</I> definition by the <B>-menu</B>
+option. If this option is <B>false</B> or not given, the accelerator binding is done
+for lowercase letters (no Shift Key pressed) and the accelerator text of the menu entry
+is shown in uppercase letters. If it is set to <B>true</B> the accelerator binding
+and the menu entry is done as given.
+<P>
+Example:<BR>
+Both accelerators are identically if <B>-casesensitive</B> is specified as false. See
+<A HREF="#-menu">-menu</A> for the syntax of the menu discription list.
+</P>
+<PRE>
+...
+{command "&Save" {} {Save the document} {<B>Ctrl s</B>} -command Menu::save}
+{command "&Save As" {} {Save with different name} {<B>Ctrl S</B>} -command Menu::saveAs}
+...
+</PRE>
+</DD>
+</DL>
+
 <DL><DT><A NAME="-height"><B>-height</B></A></DT>
 <DD>
 
@@ -108,29 +135,31 @@ one cascade menu. It has the following form:
 where <I>menuentries</I> is a list where each element describe one menu entry, which can be:
 <UL>
 <LI>for a separator:<BR>
-  {<B>separator</B>}
+  {<B>separator</B>}</LI>
 <LI>for a command:<BR>
-  {<B>command</B> <I>menuname</I> ?<I>tags</I>? ?<I>description</I>? ?<I>accelerator</I>? ?<I>option</I> <I>value</I>? ...}
+  {<B>command</B> <I>menuname</I> ?<I>tags</I>? ?<I>description</I>? ?<I>accelerator</I>? ?<I>option</I> <I>value</I>? ...}</LI>
 <LI>for a check button:<BR>
-  {<B>checkbutton</B> <I>menuname</I> ?<I>tags</I>? ?<I>description</I>? ?<I>accelerator</I>? ?<I>option</I> <I>value</I>? ...}
+  {<B>checkbutton</B> <I>menuname</I> ?<I>tags</I>? ?<I>description</I>? ?<I>accelerator</I>? ?<I>option</I> <I>value</I>? ...}</LI>
 <LI>for a radio button:<BR>
-  {<B>radiobutton</B> <I>menuname</I> ?<I>tags</I>? ?<I>description</I>? ?<I>accelerator</I> ?<I>option</I> <I>value</I>? ...}
+  {<B>radiobutton</B> <I>menuname</I> ?<I>tags</I>? ?<I>description</I>? ?<I>accelerator</I> ?<I>option</I> <I>value</I>? ...}</LI>
 <LI>for a cascade menu:<BR>
-  {<B>cascade</B> <I>menuname</I> <I>tags</I> <I>menuId</I> <I>tearoff</I> <I>menuentries</I>}
+  {<B>cascade</B> <I>menuname</I> <I>tags</I> <I>menuId</I> <I>tearoff</I> <I>menuentries</I>}</LI>
 </UL>
 where:
 <UL>
 <LI><I>menuname</I> is the name of the menu. If it contains a &amp;, the following character
 is automatically converted to the corresponding <B>-underline</B> option of <B>menu add</B>
-command.
+command.</LI>
 <LI><I>tags</I> is the tags list for the entry, used for enabling or disabling menu
-entries with <B>MainFrame::setmenustate</B>.
+entries with <B>MainFrame::setmenustate</B>.</LI>
 <LI><I>menuId</I> is an id for the menu, from which you can get menu pathname with
- <B>MainFrame::getmenu</B>.
-<LI><I>tearoff</I> specifies if menu has tearoff entry.
-<LI><I>description</I> specifies a string for <A HREF=\"DynamicHelp.html\">DynamicHelp</A>.
+ <B>MainFrame::getmenu</B>.</LI>
+<LI><I>tearoff</I> specifies if menu has tearoff entry.</LI>
+<LI><I>description</I> specifies a string for <A HREF=\"DynamicHelp.html\">DynamicHelp</A>.</LI>
 <LI><I>accelerator</I> specifies a key sequence. It is a list of two elements, where the first
-is one of <B>Ctrl</B>, <B>Alt</B> or <B>CtrlAlt</B>, and the second as letter or a digit.
+is one of <B>Ctrl</B>, <B>Alt</B> or <B>CtrlAlt</B>, and the second as letter
+(see <A HREF="#-casesensitive">-casesensitive</A> option for interpretation),  digit or
+a special key name.
 An accelerator string is build and corresponding binding set on the toplevel to invoke the
 menu entry.
 <LI><I>option value</I> specifies additionnal options for the entry (see <B>menu add</B>
