@@ -38,13 +38,14 @@ namespace eval MainFrame {
     }
 
     Widget::declare MainFrame {
-	{-width        TkResource 0      0 frame}
-	{-height       TkResource 0      0 frame}
-	{-background   TkResource ""     0 frame}
-	{-textvariable String     ""     0}
-	{-menu         String     {}     1}
-	{-separator    Enum       both   1 {none top bottom both}}
-	{-bg           Synonym    -background}
+	{-width         TkResource 0      0 frame}
+	{-height        TkResource 0      0 frame}
+	{-background    TkResource ""     0 frame}
+	{-textvariable  String     ""     0}
+	{-casesensitive Boolean    0      0}
+	{-menu          String     {}     1}
+	{-separator     Enum       both   1 {none top bottom both}}
+	{-bg            Synonym    -background}
 
 	{-menubarfont   String     ""  0}
 	{-menuentryfont String     ""  0}
@@ -180,7 +181,7 @@ proc MainFrame::create { path args } {
 
     set menu [Widget::getoption $path -menu]
     if { [llength $menu] } {
-        _create_menubar $path $menu
+        _create_menubar $path $menu [Widget::getoption $path -casesensitive]
     }
 
     bind $path <Destroy> [list MainFrame::_destroy %W]
@@ -509,7 +510,7 @@ proc MainFrame::_destroy { path } {
 # ----------------------------------------------------------------------------
 #  Command MainFrame::_create_menubar
 # ----------------------------------------------------------------------------
-proc MainFrame::_create_menubar { path descmenu } {
+proc MainFrame::_create_menubar { path descmenu casesensitive } {
     variable _widget
     global    tcl_platform
 
@@ -561,7 +562,7 @@ proc MainFrame::_create_menubar { path descmenu } {
             # menu has identifier
             set _widget($path,menuid,$menuid) $menu
         }
-        _create_entries $path $menu $menuopts $entries
+        _create_entries $path $menu $menuopts $entries $casesensitive
         incr count
     }
 }
@@ -570,7 +571,7 @@ proc MainFrame::_create_menubar { path descmenu } {
 # ----------------------------------------------------------------------------
 #  Command MainFrame::_create_entries
 # ----------------------------------------------------------------------------
-proc MainFrame::_create_entries { path menu menuopts entries } {
+proc MainFrame::_create_entries { path menu menuopts entries casesensitive } {
     variable _widget
 
     set count      [$menu cget -tearoff]
@@ -608,7 +609,7 @@ proc MainFrame::_create_entries { path menu menuopts entries } {
                 # menu has identifier
                 set _widget($path,menuid,$menuid) $submenu
             }
-            _create_entries $path $submenu $menuopts [lindex $entry 5]
+            _create_entries $path $submenu $menuopts [lindex $entry 5] $casesensitive
             incr count
             continue
         }
@@ -624,7 +625,7 @@ proc MainFrame::_create_entries { path menu menuopts entries } {
         }
 
         # entry accelerator
-        set accel [_parse_accelerator [lindex $entry 4]]
+        set accel [_parse_accelerator [lindex $entry 4] $casesensitive]
         if { [llength $accel] } {
             lappend opt -accelerator [lindex $accel 0]
             bind $_widget($path,top) [lindex $accel 1] [list $menu invoke $count]
@@ -667,48 +668,56 @@ proc MainFrame::_parse_name { menuname } {
 #	bind event.
 #
 # Arguments:
-#	desc	a list with the following format:
-#			?sequence? key
-#		sequence may be None, Ctrl, Alt, or CtrlAlt
-#		key may be any key
+#	desc		a list with the following format:
+#				?sequence? key
+#			sequence may be None, Ctrl, Alt, or CtrlAlt
+#			key may be any key
+#	casesensitive	Boolean if accelerator is case sensitive
 #
 # Results:
 #	{accel event}	a list containing the accelerator string and the event
 
-proc MainFrame::_parse_accelerator { desc } {
+proc MainFrame::_parse_accelerator { desc casesensitive} {
     if { [llength $desc] == 1 } {
 	set seq None
-	set key [string tolower [lindex $desc 0]]
+	set key [lindex $desc 0]
 	# If the key is an F key (ie, F1, F2, etc), it has to be capitalized
-	if {[regexp {^f([1-9]|([12][0-9]|3[0-5]))$} $key]} {
+	if {[regexp {^f([1-9]|([12][0-9]|3[0-5]))$} [string tolower $key]]} {
 	    set key [string toupper $key]
 	}
     } elseif { [llength $desc] == 2 } {
         set seq [lindex $desc 0]
-        set key [string tolower [lindex $desc 1]]
+        set key [lindex $desc 1]
 	# If the key is an F key (ie, F1, F2, etc), it has to be capitalized
-	if {[regexp {^f([1-9]|([12][0-9]|3[0-5]))$} $key]} {
+	if {[regexp {^f([1-9]|([12][0-9]|3[0-5]))$} [string tolower $key]]} {
 	    set key [string toupper $key]
 	}
     } else {
 	return {}
     }
+    if {! $casesensitive} {
+ 	set akey [string toupper $key]
+ 	set ekey [string tolower $key]
+    } else {
+	set akey $key
+	set ekey $key
+    }
     switch -- $seq {
 	None {
-	    set accel "[string toupper $key]"
-	    set event "<Key-$key>"
+	    set accel $akey
+	    set event "<Key-$ekey>"
 	}
 	Ctrl {
-	    set accel "Ctrl+[string toupper $key]"
-	    set event "<Control-Key-$key>"
+	    set accel "Ctrl+$akey"
+	    set event "<Control-Key-$ekey>"
 	}
 	Alt {
-	    set accel "Alt+[string toupper $key]"
-	    set event "<Alt-Key-$key>"
+	    set accel "Alt+$akey"
+	    set event "<Alt-Key-$ekey>"
 	}
 	CtrlAlt {
-	    set accel "Ctrl+Alt+[string toupper $key]"
-	    set event "<Control-Alt-Key-$key>"
+	    set accel "Ctrl+Alt+$akey"
+	    set event "<Control-Alt-Key-$ekey>"
 	}
 	default {
 	    return -code error "invalid accelerator code $seq"
